--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+backtrace = "0.3.69"
 clap = "4.4.8"
 ostree = { version = "0.19.1", features = ["v2021_5"] }
 thiserror = "1.0.50"
