--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,10 @@ edition = "2021"
 [dependencies]
 backtrace = "0.3.69"
 clap = "4.4.8"
+console = "0.15.7"
+humansize = "2.1.3"
+humantime = "2.1.0"
+indicatif = "0.17.7"
 ostree = { version = "0.19.1", features = ["v2021_5"] }
 thiserror = "1.0.50"
 tokio = { version = "1.34.0", features = ["full"] }
