--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ console = "0.15.7"
 humansize = "2.1.3"
 humantime = "2.1.0"
 indicatif = "0.17.7"
-ostree = { version = "0.19.1", features = ["v2021_5"] }
+ostree = { version = "0.19.1", features = ["v2022_6"] }
+syscalls = { version = "0.6.15", features = ["x86_64"] }
 thiserror = "1.0.50"
 tokio = { version = "1.34.0", features = ["full"] }
