--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 chrono = "0.4.31"
 clap = "4.4.8"
+console = "0.15.7"
 futures-util = "0.3.29"
 indicatif = "0.17.7"
 reqwest = { version = "0.11.22", features = ["json", "stream"] }
