--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,9 @@ clap = "4.4.8"
 console = "0.15.7"
 futures-util = "0.3.29"
 indicatif = "0.17.7"
+merge = "0.1.0"
+merge-struct = "0.1.0"
+regex = "1.10.2"
 reqwest = { version = "0.11.22", features = ["json", "stream"] }
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
