--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 chrono = "0.4.31"
 clap = "4.4.8"
 console = "0.15.7"
+crypto = "0.5.1"
 futures-util = "0.3.29"
 indicatif = "0.17.7"
 merge = "0.1.0"
