--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "swupd"
+name = "updatectl"
 version = "0.1.0"
 edition = "2021"
 
@@ -14,7 +14,7 @@ humansize = "2.1.3"
 humantime = "2.1.0"
 indicatif = "0.17.7"
 nix = { version = "0.27.1", features = ["user"] }
-ostree = { version = "0.19.1", features = ["v2022_6"] }
+ostree = { version = "0.19.1", features = ["v2021_5"] }
 syscalls = { version = "0.6.15", features = ["x86_64"] }
 thiserror = "1.0.50"
 tokio = { version = "1.34.0", features = ["full"] }
