--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,4 @@ ostree = { version = "0.19.1", features = ["v2021_5"] }
 syscalls = { version = "0.6.15", features = ["x86_64"] }
 thiserror = "1.0.50"
 tokio = { version = "1.34.0", features = ["full"] }
-log = "0.4.20"
+zbus = { version = "3.14.1", features = ["tokio"] }
