--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "updatectl"
+name = "updates"
 version = "0.1.0"
 edition = "2021"
 
@@ -18,4 +18,6 @@ ostree = { version = "0.19.1", features = ["v2021_5"] }
 syscalls = { version = "0.6.15", features = ["x86_64"] }
 thiserror = "1.0.50"
 tokio = { version = "1.34.0", features = ["full"] }
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
 zbus = { version = "3.14.1", features = ["tokio"] }
